--- a/source/index.html
+++ b/source/index.html
@@ -1,135 +1,147 @@
 <!DOCTYPE html>
 <html class="page" lang="ru">
-   <head>
-      <meta charset="utf-8">
-      <title>HTML Academy: Пинк</title>
-   </head>
-   <body class="page__body">
-      <header class="page-header">
-         <a class="page-header__logo"></a>
-         <img src="img/pinklogo.svg" width="74" height="23" alt="логотип пинк">
-         <nav class="main-nav">
-            <button class="main-nav__toggle" type="button"><span class="visually-hidden" >Открыть меню</span></button>
-            <div class="main-nav__wrapper">
-               <ul class="main-nav__list site-list">
-                  <li class="site-list__item">
-                     <a href="#">Главная</a>
-                  </li>
-                  <li class="site-list__item">
-                     <a href="#">Фотографии</a>
-                  </li>
-                  <li class="site-list__item">
-                     <a href="#">Конкурс</a>
-                  </li>
-                  <li class="site-list__item">
-                     <a href="#">HTML Academy</a>
-                  </li>
-               </ul>
-            </div>
-         </nav>
-      </header>
-      <main class="page-main">
-         <h1 class="page-main__title">Взгляните на жизнь иначе!</h1>
-         <div class="page-main__operating operating-system">
-            <a class="page-main__download" href="#">Скачать приложение</a>
-            <img class="operating-system__apple" src="img/applelogo.svg" width="47" height="56" alt="логотип эпл">
-            <img class="operating-system__android" src="img/androidlogo.svg" width="43" height="47" alt="логотип андроид">
-            <img class="operating-system__windows" src="img/microsoftlogo.svg" width="44" height="41" alt=" логотип виндовс">
-            <p class="perating-system__desc">Доступно для iPhone, iPad, Android, Windows Phone, OS X, Windows 8</p>
-         </div>
-         <section class="text">
-            <h2 class="text-desc">Устали от серости мегаполиса?<br>Нам есть, что вам
-               предложить!
-            </h2>
-         </section>
-         <div class="desc">
-            <h3 class="desc__title">Поднимает настроение</h3>
-            <p class="desc__subtitle">Приложение позволит вам победить осеннюю хандру и депрессию буквально в несколько кликов!</p>
-            <h3 class="desc__title">Меняет мир вокруг</h3>
-            <p class="desc__subtitle">Сделайте снимок и украсьте его смайликом или текстовой подписью, чтобы усилить эффект</p>
-            <h3 class="desc__title">Заводит новых друзей</h3>
-            <p class="desc__subtitle">Ставьте лайки, комментируйте, делитесь фотографиями с друзьями и заводите новых</p>
-            <img class="desc__image" src="img/iphone3.jpg" width="157" height="320" alt="изображение айфона">
-         </div>
-         <div class="slider-review">
-            <h3 class="slider-review__title">Николай Петров</h3>
-            <p class="slider-review__subtitle">Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!</p>
-         </div>
-         <div class="table-slider">
-            <table class="table-slider__base">
-               <tr>
-                  <th>База</th>
-               </tr>
-               <tr>
-                  <th>1,99 USD</th>
-               </tr>
-               <tr>
-                  <th>Розовый фильтр</th>
-               </tr>
-               <tr>
-                  <th>Смайлики</th>
-               </tr>
-               <tr>
-                  <th>Комментарии</th>
-               </tr>
-            </table>
-            <table class="table-slider__standard">
-               <tr>
-                  <th>Стандарт</th>
-               </tr>
-               <tr>
-                  <th>3,99 USD</th>
-               </tr>
-               <tr>
-                  <th>Розовый фильтр</th>
-               </tr>
-               <tr>
-                  <th>Смайлики</th>
-               </tr>
-               <tr>
-                  <th>Комментарии</th>
-               </tr>
-            </table>
-            <table class="table-slider__unlim">
-               <tr>
-                  <th>Анлим</th>
-               </tr>
-               <tr>
-                  <th>9,99 USD</th>
-               </tr>
-               <tr>
-                  <th>Розовый фильтр</th>
-               </tr>
-               <tr>
-                  <th>Смайлики</th>
-               </tr>
-               <tr>
-                  <th>Комментарии</th>
-               </tr>
-            </table>
-         </div>
-         <div class="contacts">
-            <h3 class="contacts__text">Остались вопросы?<br>Свяжитесь с нами!</h3>
-            <h4 class="contacts__title">Звоните:</h4>
-            <a class="contacts__phone" href="tel:+78125556666">+7(812)555-66-66</a>
-            <h4 class="contacts__title-mail">Пишите:</h4>
-            <a class="contacts__mail" href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
-            <h4 class="contacts__title-address">Приезжайте в гости:</h4>
-            <p class="contacts__address">ул. Большая Конюшенная, 19/8</p>
-            <img class="contacts__map" src="img/map.jpg" width="320" height="200" alt="карта месторасположения">
-         </div>
-      </main>
-      <footer class="page-footer">
-         <div class="page-footer__social">
-            <img class="page-footer__logo" src="img/logotypebluetablet.svg" width="145" height="40" alt="логотип пинк">
-            <a class="page-footer__twitter" href="#"><img src="img/twitter.svg" width="18" height="14" alt="ссылка на твитерр аккаунт"></a>
-            <a class="page-footer__facebook" href="#"><img src="img/facebook.svg" width="9" height="18" alt="ссылка на фейсбук аккаунт"></a>
-            <a class="page-footer__youtube" href="#"><img src="img/youtube.svg" width="15" height="13" alt=" ссылка на ютуб канал"></a>
-         </div>
-         <div class="page-footer__copyright copyright">
-            <p class="copyright__text">Разработано</p>
-            <a class="copyright__link" href="https://htmlacademy.ru/study"></a>
-         </div>
-      </footer>
-   </body>
+
+<head>
+  <meta charset="utf-8">
+  <title>HTML Academy: Пинк</title>
+</head>
+
+<body class="page__body">
+  <header class="page-header">
+    <a class="page-header__logo" href="#"><img src="img/pinklogo.svg" width="74" height="23" alt="логотип пинк"></a>
+    <nav class="main-nav">
+      <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
+      <div class="main-nav__wrapper">
+        <ul class="main-nav__list site-list">
+          <li class="site-list__item">
+            <a href="#">Главная</a>
+          </li>
+          <li class="site-list__item">
+            <a href="#">Фотографии</a>
+          </li>
+          <li class="site-list__item">
+            <a href="#">Конкурс</a>
+          </li>
+          <li class="site-list__item">
+            <a href="#">HTML Academy</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+  </header>
+  <main class="page-main">
+    <h1 class="page-main__title">Взгляните на жизнь иначе!</h1>
+    <div class="page-main__operating operating-system">
+      <a class="page-main__download" href="#">Скачать приложение</a>
+      <a href="#"><img src="img/applelogo.svg" width="47" height="56" alt="логотип эпл"></a>
+      <a href="#"><img src="img/androidlogo.svg" width="43" height="47" alt="логотип андроид"></a>
+      <a href="#"><img src="img/microsoftlogo.svg" width="44" height="41" alt=" логотип виндовс"></a>
+      <p class="operating-system__desc">Доступно для iPhone, iPad, Android, Windows Phone, OS X, Windows 8</p>
+    </div>
+    <section class="text">
+      <h2 class="text__desc">Устали от серости мегаполиса?<br>Нам есть, что вам
+        предложить!
+      </h2>
+    </section>
+    <div class="desc">
+      <h3 class="desc__title">Поднимает настроение</h3>
+      <p class="desc__subtitle">Приложение позволит вам победить осеннюю хандру и депрессию буквально в несколько
+        кликов!</p>
+      <h3 class="desc__title">Меняет мир вокруг</h3>
+      <p class="desc__subtitle">Сделайте снимок и украсьте его смайликом или текстовой подписью, чтобы усилить эффект
+      </p>
+      <h3 class="desc__title">Заводит новых друзей</h3>
+      <p class="desc__subtitle">Ставьте лайки, комментируйте, делитесь фотографиями с друзьями и заводите новых</p>
+      <img class="desc__image" src="img/iphone3.jpg" width="157" height="320" alt="изображение айфона">
+    </div>
+    <div class="slider-review">
+      <h3 class="slider-review__title">Николай Петров</h3>
+      <blockquote><p class="slider-review__subtitle">Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные
+        серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!</p></blockquote>
+        <h3 class="slider-review__title">Сергей Хуцкий</h3>
+      <blockquote><p class="slider-review__subtitle">Очень классное приложение,разработчикам респект!</p></blockquote>
+        <h3 class="slider-review__title">Виктор Казакевич</h3>
+      <blockquote><p class="slider-review__subtitle">Приложение за которое не стыдно.Всё очень понятно и просто.</p></blockquote>
+    </div>
+    <div class="table-slider">
+      <table class="table-slider__base">
+        <tr>
+          <th>База</th>
+        </tr>
+        <tr>
+          <th>1,99 USD</th>
+        </tr>
+        <tr>
+          <th>Розовый фильтр</th>
+        </tr>
+        <tr>
+          <th>Смайлики</th>
+        </tr>
+        <tr>
+          <th>Комментарии</th>
+        </tr>
+      </table>
+      <table class="table-slider__standard">
+        <tr>
+          <th>Стандарт</th>
+        </tr>
+        <tr>
+          <th>3,99 USD</th>
+        </tr>
+        <tr>
+          <th>Розовый фильтр</th>
+        </tr>
+        <tr>
+          <th>Смайлики</th>
+        </tr>
+        <tr>
+          <th>Комментарии</th>
+        </tr>
+      </table>
+      <table class="table-slider__unlim">
+        <tr>
+          <th>Анлим</th>
+        </tr>
+        <tr>
+          <th>9,99 USD</th>
+        </tr>
+        <tr>
+          <th>Розовый фильтр</th>
+        </tr>
+        <tr>
+          <th>Смайлики</th>
+        </tr>
+        <tr>
+          <th>Комментарии</th>
+        </tr>
+      </table>
+    </div>
+    <div class="contacts">
+      <h3 class="contacts__text">Остались вопросы?<br>Свяжитесь с нами!</h3>
+      <h4 class="contacts__title">Звоните:</h4>
+      <a class="contacts__phone" href="tel:+78125556666">+7(812)555-66-66</a>
+      <h4 class="contacts__title-mail">Пишите:</h4>
+      <a class="contacts__mail" href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
+      <h4 class="contacts__title-address">Приезжайте в гости:</h4>
+      <p class="contacts__address">ул. Большая Конюшенная, 19/8</p>
+      <img class="contacts__map" src="img/map.jpg" width="320" height="200" alt="карта месторасположения">
+    </div>
+  </main>
+  <footer class="page-footer">
+    <div class="page-footer__social">
+      <img class="page-footer__logo" src="img/logotypebluetablet.svg" width="145" height="40" alt="логотип пинк">
+      <a class="page-footer__twitter" href="#"><img src="img/twitter.svg" width="18" height="14"
+          alt="ссылка на твитерр аккаунт"></a>
+      <a class="page-footer__facebook" href="#"><img src="img/facebook.svg" width="9" height="18"
+          alt="ссылка на фейсбук аккаунт"></a>
+      <a class="page-footer__youtube" href="#"><img src="img/youtube.svg" width="15" height="13"
+          alt=" ссылка на ютуб канал"></a>
+    </div>
+    <div class="page-footer__copyright copyright">
+      <p class="copyright__text">Разработано</p>
+      <a class="copyright__link" href="https://htmlacademy.ru/study"></a>
+    </div>
+  </footer>
+</body>
+
 </html>
