Поправки главной страницы

--- a/source/index.html
+++ b/source/index.html
@@ -56,12 +56,19 @@
     </div>
     <div class="slider-review">
       <h3 class="slider-review__title">Николай Петров</h3>
-      <blockquote><p class="slider-review__subtitle">Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные
-        серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!</p></blockquote>
-        <h3 class="slider-review__title">Сергей Хуцкий</h3>
-      <blockquote><p class="slider-review__subtitle">Очень классное приложение,разработчикам респект!</p></blockquote>
-        <h3 class="slider-review__title">Виктор Казакевич</h3>
-      <blockquote><p class="slider-review__subtitle">Приложение за которое не стыдно.Всё очень понятно и просто.</p></blockquote>
+      <blockquote>
+        <p class="slider-review__subtitle">Это приложение перевернуло мой мир и позволило по-новому взглянуть на
+          привычные
+          серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!</p>
+      </blockquote>
+      <h3 class="slider-review__title">Сергей Хуцкий</h3>
+      <blockquote>
+        <p class="slider-review__subtitle">Очень классное приложение,разработчикам респект!</p>
+      </blockquote>
+      <h3 class="slider-review__title">Виктор Казакевич</h3>
+      <blockquote>
+        <p class="slider-review__subtitle">Приложение за которое не стыдно.Всё очень понятно и просто.</p>
+      </blockquote>
     </div>
     <div class="table-slider">
       <table class="table-slider__base">
