Поправки главной страницы

--- a/source/index.html
+++ b/source/index.html
@@ -67,7 +67,7 @@
       </blockquote>
       <h3 class="slider-review__title">Виктор Казакевич</h3>
       <blockquote>
-        <p class="slider-review__subtitle">Приложение за которое не стыдно.Всё очень понятно и просто.</p>
+        <p class="slider-review__subtitle">Приложение за которое не стыдно.Всё очень понятно и просто!</p>
       </blockquote>
     </div>
     <div class="table-slider">
