разметка внутренних страниц

--- a/source/index.html
+++ b/source/index.html
@@ -17,13 +17,13 @@
             <a href="#">Главная</a>
           </li>
           <li class="site-list__item">
-            <a href="#">Фотографии</a>
+            <a href="catalog.html">Фотографии</a>
           </li>
           <li class="site-list__item">
-            <a href="#">Конкурс</a>
+            <a href="form.html">Конкурс</a>
           </li>
           <li class="site-list__item">
-            <a href="#">HTML Academy</a>
+            <a href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
           </li>
         </ul>
       </div>
@@ -46,7 +46,8 @@
     <div class="desc">
       <h3 class="desc__title">Поднимает настроение</h3>
       <p class="desc__subtitle">Приложение позволит вам победить осеннюю хандру и депрессию буквально в несколько
-        кликов!</p>
+        кликов!
+      </p>
       <h3 class="desc__title">Меняет мир вокруг</h3>
       <p class="desc__subtitle">Сделайте снимок и украсьте его смайликом или текстовой подписью, чтобы усилить эффект
       </p>
@@ -59,7 +60,8 @@
       <blockquote>
         <p class="slider-review__subtitle">Это приложение перевернуло мой мир и позволило по-новому взглянуть на
           привычные
-          серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!</p>
+          серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!
+        </p>
       </blockquote>
       <h3 class="slider-review__title">Сергей Хуцкий</h3>
       <blockquote>
