--- a/source/catalog.html
+++ b/source/catalog.html
@@ -1,47 +1,167 @@
 <!DOCTYPE html>
 <html class="page" lang="ru">
-   <head>
-      <meta charset="utf-8">
-      <title>HTML Academy: Пинк</title>
-   </head>
-   <body class="page__body">
-      <header class="page-header">
-         <a class="page-header__logo"></a>
-         <img src="img/pinklogo.svg" width="74" height="23" alt="логотип пинк">
-         <nav class="main-nav">
-            <button class="main-nav__toggle" type="button"><span class="visually-hidden" >Открыть меню</span></button>
-            <div class="main-nav__wrapper">
-               <ul class="main-nav__list site-list">
-                  <li class="site-list__item">
-                     <a href="#">Главная</a>
-                  </li>
-                  <li class="site-list__item">
-                     <a href="#">Фотографии</a>
-                  </li>
-                  <li class="site-list__item">
-                     <a href="#">Конкурс</a>
-                  </li>
-                  <li class="site-list__item">
-                     <a href="#">HTML Academy</a>
-                  </li>
-               </ul>
-            </div>
-         </nav>
-      </header>
-      <main class="page-main">
 
-      </main>
-      <footer class="page-footer">
-         <div class="page-footer__social">
-            <img class="page-footer__logo" src="img/logotypebluetablet.svg" width="145" height="40" alt="логотип пинк">
-            <a class="page-footer__twitter" href="#"><img src="img/twitter.svg" width="18" height="14" alt="ссылка на твитерр аккаунт"></a>
-            <a class="page-footer__facebook" href="#"><img src="img/facebook.svg" width="9" height="18" alt="ссылка на фейсбук аккаунт"></a>
-            <a class="page-footer__youtube" href="#"><img src="img/youtube.svg" width="15" height="13" alt=" ссылка на ютуб канал"></a>
-         </div>
-         <div class="page-footer__copyright copyright">
-            <p class="copyright__text">Разработано</p>
-            <a class="copyright__link" href="https://htmlacademy.ru/study"></a>
-         </div>
-      </footer>
-   </body>
+<head>
+  <meta charset="utf-8">
+  <title>HTML Academy: Пинк</title>
+</head>
+
+<body class="page__body">
+  <header class="page-header">
+    <a class="page-header__logo"></a>
+    <img src="img/pinklogo.svg" width="74" height="23" alt="логотип пинк">
+    <nav class="main-nav">
+      <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
+      <div class="main-nav__wrapper">
+        <ul class="main-nav__list site-list">
+          <li class="site-list__item">
+            <a href="index.html">Главная</a>
+          </li>
+          <li class="site-list__item">
+            <a href="#">Фотографии</a>
+          </li>
+          <li class="site-list__item">
+            <a href="form.html">Конкурс</a>
+          </li>
+          <li class="site-list__item">
+            <a href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+  </header>
+  <main class="page-main">
+    <section class="page-main__wrap">
+      <h1 class="page-main__title title-h1">Фотографии<br>пользователей</h1>
+      <p class="page-main__subtitle subtitle-p">Взгляните на фотографии, которые<br> выкладывают пользователи!<br>
+        Видите, как не хватает ваших?
+      </p>
+      <div class="page-main__panorama panorama-tablet">
+        <img class="page-main__panorama panorama-photo" src="img/panoramatablet.jpg" width="320" height="137"
+          alt="панорама дня">
+        <section class="page-main__tablet tablet-section">
+          <h4 class="page-main__name tablet-name">Анна</h4>
+          <p class="page-main__panorama tablet-p">(5 минут назад)</p>
+          <blockquote class="page-main__panorama panorama-blockquote">
+            <p class="page-main__panorama blockquote-text"> Прыгать или нет? Напишите в<br> комментарии свой совет и<br>
+              смотрите прямую трансляцию в<br> перископе,
+              задавайте свои вопросы!
+            </p>
+          </blockquote>
+          <img class="page-main__panorama tablet-heart" src="img/heart.svg" width="13" height="12" alt="лайк">
+          <p class="page-main__panorama tablet-like">Нравится:</p>
+          <p class="page-main__panorama tablet-amount">215</p>
+        </section>
+      </div>
+      <div class="page-main photo-auto">
+        <img class="page-main auto-image" src="img/photo1.jpg" width="280" height="180" alt="фото автомобиля">
+        <section class=" page-main auto-section">
+          <h4 class=" page-main auto-name">Левон</h4>
+          <p class=" page-main auto-p">(5 часов назад)</p>
+          <blockquote class="page-main auto-blockquote">
+            <p class="page-main auto-text"> Вчера он на луну летал, сегодня в<br> руки к нам попал.
+            </p>
+          </blockquote>
+          <img class="page-main auto-heart" src="img/heart.svg" width="13" height="12" alt="лайк">
+          <p class="page-main auto-like">Нравится:</p>
+          <p class="page-main auto-amount">356</p>
+        </section>
+      </div>
+      <div class=" page-main drum-photo">
+        <img class="page-main drum-image" src="img/photo2.jpg" width="280" height="180" alt="ударная установка">
+        <section class="page-main drum-section">
+          <h4 class="page-main drum-name">Антон</h4>
+          <p class="page-main drum-p">(12 часов назад)</p>
+          <blockquote class="page-main drum-blockquote">
+            <p class="page-main drum-text"> Соседи будут рады</p>
+          </blockquote>
+          <img class="page-main drum-heart" src="img/heart.svg" width="13" height="12" alt="лайк">
+          <p class="page-main drum-like">Нравится:</p>
+          <p class="page-main drum-amount">666</p>
+        </section>
+      </div>
+      <div class="page-main glass-wall">
+        <img class="page-main glass-photo" src="img/panoramatablet.jpg" width="280" height="180" alt="стеклянная стена">
+        <section class="page-main glass-section">
+          <h4 class="page-main glass-name">Борис</h4>
+          <p class="page-main glass-p">(20 часов назад)</p>
+          <blockquote class="page-main glass-blockquote">
+            <p class="page-main glass-text"> Здесь могла быть ваша цитата о высоком и вечном.
+            </p>
+          </blockquote>
+          <img class="page-main glass-heart" src="img/heart.svg" width="13" height="12" alt="лайк">
+          <p class="page-main glass-like">Нравится:</p>
+          <p class="page-main glass-amount">215</p>
+        </section>
+      </div>
+      <div class="melon">
+        <img class="melon__photo" src="img/photo4tablet.jpg" width="280" height="180" alt="кубанская бахча">
+        <section class="melon__section">
+          <h4 class="melon__name">Сергей</h4>
+          <p class="melon__p">(25 часов назад)</p>
+          <blockquote class="melon__blockquote">
+            <p class="melon__text"> Прыгать или нет? Напишите в<br> комментарии свой совет и<br> смотрите прямую
+              трансляцию в<br> перископе,
+              задавайте свои вопросы!
+            </p>
+          </blockquote>
+          <img class="melon__heart" src="img/heart.svg" width="13" height="12" alt="лайк">
+          <p class="melon__like">Нравится:</p>
+          <p class="melon__amount">4</p>
+        </section>
+      </div>
+      <div class="mountain">
+        <img class="mountain__photo" src="img/photo5tablet.jpg" width="280" height="180" alt="отдых в горах">
+        <section class="mountain__section">
+          <h4 class="mountain__name">Максим</h4>
+          <p class="mountain__p">(40 часов назад)</p>
+          <blockquote class="mountain__blockquote">
+            <p class="mountain__text"> Где снег-то?</p>
+          </blockquote>
+          <img class="mountain__heart" src="img/heart.svg" width="13" height="12" alt="лайк">
+          <p class="mountain__like">Нравится:</p>
+          <p class="mountain__amount">150</p>
+        </section>
+      </div>
+      <div class="sunset">
+        <img class="sunset__photo" src="img/photo6tablet.jpg" width="280" height="180" alt="закат из иллюминатора">
+        <section class="sunset__section">
+          <h4 class="sunset__name">Надежда</h4>
+          <p class="sunset__p">(45 часов назад)</p>
+          <blockquote class="sunset__blockquote">
+            <p class="sunset__text"> Прыгать или нет? Напишите в<br> комментарии свой совет и<br> смотрите прямую
+              трансляцию в<br> перископе,
+              задавайте свои вопросы!
+            </p>
+          </blockquote>
+          <img class="sunset__heart" src="img/heart.svg" width="13" height="12" alt="лайк">
+          <p class="sunset__like">Нравится:</p>
+          <p class="sunset__amount">2560</p>
+        </section>
+      </div>
+      <p class="page-main__text text-p">Затмите их всех!<br>Выкладывайте все, что накопилось в<br> телефоне!</p>
+    </section>
+    <div class="newphoto">
+      <img class="newphoto__photo" src="img/photo7tablet.jpg" alt="морозная зима">
+      <button class="newphoto__add" type="submit">Запостить</button>
+      <button class="newphoto__cancellation" type="submit">Отмена</button>
+    </div>
+  </main>
+  <footer class="page-footer">
+    <div class="page-footer__social">
+      <img class="page-footer__logo" src="img/logotypebluetablet.svg" width="145" height="40" alt="логотип пинк">
+      <a class="page-footer__twitter" href="#"><img src="img/twitter.svg" width="18" height="14"
+          alt="ссылка на твитерр аккаунт"></a>
+      <a class="page-footer__facebook" href="#"><img src="img/facebook.svg" width="9" height="18"
+          alt="ссылка на фейсбук аккаунт"></a>
+      <a class="page-footer__youtube" href="#"><img src="img/youtube.svg" width="15" height="13"
+          alt=" ссылка на ютуб канал"></a>
+    </div>
+    <div class="page-footer__copyright copyright">
+      <p class="copyright__text">Разработано</p>
+      <a class="copyright__link" href="https://htmlacademy.ru/study"></a>
+    </div>
+  </footer>
+</body>
+
 </html>
