--- a/source/form.html
+++ b/source/form.html
@@ -1,47 +1,141 @@
 <!DOCTYPE html>
 <html class="page" lang="ru">
-   <head>
-      <meta charset="utf-8">
-      <title>HTML Academy: Пинк</title>
-   </head>
-   <body class="page__body">
-      <header class="page-header">
-         <a class="page-header__logo"></a>
-         <img src="img/pinklogo.svg" width="74" height="23" alt="логотип пинк">
-         <nav class="main-nav">
-            <button class="main-nav__toggle" type="button"><span class="visually-hidden" >Открыть меню</span></button>
-            <div class="main-nav__wrapper">
-               <ul class="main-nav__list site-list">
-                  <li class="site-list__item">
-                     <a href="#">Главная</a>
-                  </li>
-                  <li class="site-list__item">
-                     <a href="#">Фотографии</a>
-                  </li>
-                  <li class="site-list__item">
-                     <a href="#">Конкурс</a>
-                  </li>
-                  <li class="site-list__item">
-                     <a href="#">HTML Academy</a>
-                  </li>
-               </ul>
-            </div>
-         </nav>
-      </header>
-      <main class="page-main">
-         
-      </main>
-      <footer class="page-footer">
-         <div class="page-footer__social">
-            <img class="page-footer__logo" src="img/logotypebluetablet.svg" width="145" height="40" alt="логотип пинк">
-            <a class="page-footer__twitter" href="#"><img src="img/twitter.svg" width="18" height="14" alt="ссылка на твитерр аккаунт"></a>
-            <a class="page-footer__facebook" href="#"><img src="img/facebook.svg" width="9" height="18" alt="ссылка на фейсбук аккаунт"></a>
-            <a class="page-footer__youtube" href="#"><img src="img/youtube.svg" width="15" height="13" alt=" ссылка на ютуб канал"></a>
-         </div>
-         <div class="page-footer__copyright copyright">
-            <p class="copyright__text">Разработано</p>
-            <a class="copyright__link" href="https://htmlacademy.ru/study"></a>
-         </div>
-      </footer>
-   </body>
+
+<head>
+  <meta charset="utf-8">
+  <title>HTML Academy: Пинк</title>
+</head>
+
+<body class="page__body">
+  <header class="page-header">
+    <a class="page-header__logo"></a>
+    <img src="img/pinklogo.svg" width="74" height="23" alt="логотип пинк">
+    <nav class="main-nav">
+      <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
+      <div class="main-nav__wrapper">
+        <ul class="main-nav__list site-list">
+          <li class="site-list__item">
+            <a href="index.html">Главная</a>
+          </li>
+          <li class="site-list__item">
+            <a href="catalog.html">Фотографии</a>
+          </li>
+          <li class="site-list__item">
+            <a href="#">Конкурс</a>
+          </li>
+          <li class="site-list__item">
+            <a href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+  </header>
+  <main class="page-main">
+    <section class="page-main__text2">
+      <h1 class="page-main__title2">Конкурс на самое безбашенное путешествие с Пинк</h1>
+      <p class="page-main__subtitle2">Поделитесь своей историей и получите шанс выиграть ценный приз — 1000 миль на вашу
+        бонусную карту!
+      </p>
+    </section>
+    <div class="form">
+      <form class="form__competition" action="https://echo.htmlacademy.ru" method="POST">
+        <div class="form__competition-name">
+          <input class="form__competition-firstname" type="text" name="firstname" id="firstname"
+            value="Укажите фамилию *"><br>
+          <label class="form__competition-label1 label-firstname" for="firstname">Фамилия:</label>
+          <input class="form__competition-lastname" type="text" name="lastname" id="lastname"
+            value="Введите ваше имя *"><br>
+          <label class="form__competition-label2 label-lastname" for="lastname"> Имя: </label>
+          <input class="form__competition-patronymic" type="text" name="patronymic" id="patronymic"
+            value="Ну и отчество тоже"><br>
+          <label class="form__competition-label3 label-patronymic" for="patronymic">Отчество:</label>
+          <p class="form__competition-text">Ваши безбашенные достижения в путешествии</p>
+        </div>
+        <div class="form__checkbox">
+          <ul class="form__checkbox-list">
+            <li class="form__checkbox-item">
+              <input class="form__checkbox-selfie" type="checkbox" name="achievement" id="selfie"
+                value="Сделал селфи с акулой" checked>
+              <label class="form__checkbox-label4 label-selfie" for="selfie">Сделал селфи с акулой</label>
+            </li>
+            <li class="form__checkbox-item">
+              <input class="form__checkbox-tanned" type="checkbox" name="achievement" id="tanned"
+                value="Обгорел на пляже" checked>
+              <label class="form__checkbox-label5 label-tanned" for="tanned">Обгорел на пляже</label>
+            </li>
+            <li class="form__checkbox-item">
+              <input class="form__checkbox-chucknorris " type="checkbox" name="achievement" id="chucknorris"
+                value="Видел Чака Норриса">
+              <label class="form__checkbox-label6 label-chucknorris" for="chucknorris">Видел Чака Норриса</label>
+            </li>
+            <li class="form__checkbox-item">
+              <input class="form__checkbox-souvenirs" type="checkbox" name="achievement" id="souvenirs"
+                value="Накупил сувениров">
+              <label class="form__checkbox-label7 label-souvenirs" for="souvenirs">Накупил сувениров</label>
+            </li>
+            <li class="form__checkbox-item">
+              <input class="form__checkbox-tower" type="checkbox" name="achievement" id="tower" value="Удержал башню"
+                checked>
+              <label class="form__checkbox-label8 label-tower" for="tower">Удержал башню</label>
+            </li>
+            <li class="form__checkbox-item">
+              <input class="form__checkbox-hotel" type="checkbox" name="achievement" id="hotel" value="Разгромил отель">
+              <label class="form__checkbox-label9 label-hotel" for="hotel">Разгромил отель</label>
+            </li>
+          </ul>
+        </div>
+        <div class="form__contacts">
+          <input class="form__contacts-phone" type="text" name="phone" id="phone" value="Номер,пожалуйста"><br>
+          <label class="form__contacts-label10 label-phone" for="phone">Номер телефона </label>
+          <input class="form__contacts-email" type="email" name="email" id="email" value="Введите почту *"><br>
+          <label class="form__contacts-label11 label-email" for="email">Адрес почты</label>
+        </div>
+        <div class="form__radio">
+          <p class="form__radio-text">С каким приложением путешествовали?</p>
+          <ul class="form__radio-list">
+            <li class="form__radio-item">
+              <input class="form__radio-ios" type="radio" name="app" id="ios" value="Pink для iOS" checked>
+              <label class="form__radio-label12 label-ios" for="ios">Pink для iOS</label>
+            </li>
+            <li class="form__radio-item">
+              <input class="form__radio-android" type="radio" name="app" id="android" value="Pink на Android">
+              <label class="form__radio-label13 label-android" for="android">Pink на Android</label>
+            </li>
+            <li class="form__radio-item">
+              <input class="form__radio-windows" type="radio" name="app" id="windows" value="Windows Phone">
+              <label class="form__radio-label14 label-windows" for="windows">Windows Phone</label>
+            </li>
+          </ul>
+        </div>
+        <div class="form__review">
+          <p class="form__review-text">Опишите свои эмоции</p>
+          <p class="form__review-text2">
+            <textarea class="form__review-textarea" name="comment">Можно прям в красках, не
+                     стесняясь в выражениях</textarea>
+          </p>
+          <button type="submit" value="Отправить форму">Отправить форму</button>
+        </div>
+      </form>
+    </div>
+    <section class="important">
+      <h4 class="important__text">* — обязательные поля</h4>
+    </section>
+  </main>
+  <footer class="page-footer">
+    <div class="page-footer__social">
+      <img class="page-footer__logo" src="img/logotypebluetablet.svg" width="145" height="40" alt="логотип пинк">
+      <a class="page-footer__twitter" href="#"><img src="img/twitter.svg" width="18" height="14"
+          alt="ссылка на твитерр аккаунт"></a>
+      <a class="page-footer__facebook" href="#"><img src="img/facebook.svg" width="9" height="18"
+          alt="ссылка на фейсбук аккаунт"></a>
+      <a class="page-footer__youtube" href="#"><img src="img/youtube.svg" width="15" height="13"
+          alt=" ссылка на ютуб канал"></a>
+    </div>
+    <div class="page-footer__copyright copyright">
+      <p class="copyright__text">Разработано</p>
+      <a class="copyright__link" href="https://htmlacademy.ru/study"></a>
+    </div>
+  </footer>
+</body>
+
 </html>
