--- a/source/index.html
+++ b/source/index.html
@@ -4,13 +4,15 @@
 <head>
   <meta charset="utf-8">
   <title>HTML Academy: Пинк</title>
+  <link rel="stylesheet" href="css/style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;700&display=swap" rel="stylesheet">
 </head>
 
 <body class="page__body">
   <header class="page-header">
     <a class="page-header__logo" href="#"><img src="img/pinklogo.svg" width="74" height="23" alt="логотип пинк"></a>
     <nav class="main-nav">
-      <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
+      <button class="main-nav__toggle" type="button"><span class="main-nav__button">Открыть меню</span></button>
       <div class="main-nav__wrapper">
         <ul class="main-nav__list site-list">
           <li class="site-list__item">
@@ -30,13 +32,18 @@
     </nav>
   </header>
   <main class="page-main">
-    <h1 class="page-main__title">Взгляните на жизнь иначе!</h1>
-    <div class="page-main__operating operating-system">
+    <section class="page-main__wrap">
+      <h1 class="page-main__title">Взгляните на жизнь иначе!</h1>
+      <img src="img/phone.png" width="320" height="286" alt="рука с телефоном">
+    </section>
+    <div class="page-main__operating">
       <a class="page-main__download" href="#">Скачать приложение</a>
-      <a href="#"><img src="img/applelogo.svg" width="47" height="56" alt="логотип эпл"></a>
-      <a href="#"><img src="img/androidlogo.svg" width="43" height="47" alt="логотип андроид"></a>
-      <a href="#"><img src="img/microsoftlogo.svg" width="44" height="41" alt=" логотип виндовс"></a>
-      <p class="operating-system__desc">Доступно для iPhone, iPad, Android, Windows Phone, OS X, Windows 8</p>
+      <div class="page-main__operating-system">
+        <a href="#"><img src="img/applelogo.svg" width="47" height="56" alt="логотип эпл"></a>
+        <a href="#"><img src="img/androidlogo.svg" width="43" height="47" alt="логотип андроид"></a>
+        <a href="#"><img src="img/microsoftlogo.svg" width="44" height="41" alt=" логотип виндовс"></a>
+      </div>
+      <p class="page-main__desc">Доступно для iPhone, iPad, Android, Windows Phone, OS X, Windows 8</p>
     </div>
     <section class="text">
       <h2 class="text__desc">Устали от серости мегаполиса?<br>Нам есть, что вам
@@ -53,7 +60,7 @@
       </p>
       <h3 class="desc__title">Заводит новых друзей</h3>
       <p class="desc__subtitle">Ставьте лайки, комментируйте, делитесь фотографиями с друзьями и заводите новых</p>
-      <img class="desc__image" src="img/iphone3.jpg" width="157" height="320" alt="изображение айфона">
+      <img class="desc__image" src="img/iphone3.png" width="157" height="320" alt="изображение айфона">
     </div>
     <div class="slider-review">
       <h3 class="slider-review__title">Николай Петров</h3>
@@ -128,17 +135,20 @@
     <div class="contacts">
       <h3 class="contacts__text">Остались вопросы?<br>Свяжитесь с нами!</h3>
       <h4 class="contacts__title">Звоните:</h4>
-      <a class="contacts__phone" href="tel:+78125556666">+7(812)555-66-66</a>
-      <h4 class="contacts__title-mail">Пишите:</h4>
-      <a class="contacts__mail" href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
-      <h4 class="contacts__title-address">Приезжайте в гости:</h4>
-      <p class="contacts__address">ул. Большая Конюшенная, 19/8</p>
+      <a class="contacts__subtitle" href="tel:+78125556666">+7(812)555-66-66</a>
+      <h4 class="contacts__title">Пишите:</h4>
+      <a class="contacts__subtitle" href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
+      <h4 class="contacts__title">Приезжайте в гости:</h4>
+      <p class="contacts__subtitle">ул. Большая Конюшенная, 19/8</p>
+      <img class="contacts__svg" src="img/trianglewhitefooter.png" alt="фон">
       <img class="contacts__map" src="img/map.jpg" width="320" height="200" alt="карта месторасположения">
     </div>
   </main>
   <footer class="page-footer">
     <div class="page-footer__social">
       <img class="page-footer__logo" src="img/logotypebluetablet.svg" width="145" height="40" alt="логотип пинк">
+    </div>
+    <div class="page-footer__image">
       <a class="page-footer__twitter" href="#"><img src="img/twitter.svg" width="18" height="14"
           alt="ссылка на твитерр аккаунт"></a>
       <a class="page-footer__facebook" href="#"><img src="img/facebook.svg" width="9" height="18"
@@ -148,7 +158,8 @@
     </div>
     <div class="page-footer__copyright copyright">
       <p class="copyright__text">Разработано</p>
-      <a class="copyright__link" href="https://htmlacademy.ru/study"></a>
+      <a class="copyright__link" href="https://htmlacademy.ru/study"><img src="img/htmlacademy.png" width="27"
+          height="34" alt="логотип академии"></a>
     </div>
   </footer>
 </body>
