--- a/source/form.html
+++ b/source/form.html
@@ -10,10 +10,13 @@
 
 <body class="page__body">
   <header class="page-header">
-    <a class="page-header__logo"></a>
-    <img src="img/pinklogo.svg" width="74" height="23" alt="логотип пинк">
+    <div class="page-header__nav">
+      <a class="page-header__logo">
+        <img src="img/pinklogo.svg" width="74" height="23" alt="логотип пинк">
+      </a>
+      <button class="page-header__toggle" type="button"><span class="page-header__button">Открыть меню</span></button>
+    </div>
     <nav class="main-nav">
-      <button class="main-nav__toggle" type="button"><span class="main-nav__button">Открыть меню</span></button>
       <div class="main-nav__wrapper">
         <ul class="main-nav__list site-list">
           <li class="site-list__item">
