--- a/source/index.html
+++ b/source/index.html
@@ -10,9 +10,13 @@
 
 <body class="page__body">
   <header class="page-header">
-    <a class="page-header__logo" href="#"><img src="img/pinklogo.svg" width="74" height="23" alt="логотип пинк"></a>
+    <div class="page-header__nav">
+      <a class="page-header__logo">
+        <img src="img/pinklogo.svg" width="74" height="23" alt="логотип пинк">
+      </a>
+      <button class="page-header__toggle" type="button"><span class="page-header__button">Открыть меню</span></button>
+    </div>
     <nav class="main-nav">
-      <button class="main-nav__toggle" type="button"><span class="main-nav__button">Открыть меню</span></button>
       <div class="main-nav__wrapper">
         <ul class="main-nav__list site-list">
           <li class="site-list__item">
@@ -34,7 +38,7 @@
   <main class="page-main">
     <section class="page-main__wrap">
       <h1 class="page-main__title">Взгляните на жизнь иначе!</h1>
-      <img src="img/phone.png" width="320" height="286" alt="рука с телефоном">
+      <img class="page-main__img" src="img/phone.png" width="320" height="286" alt="рука с телефоном">
     </section>
     <div class="page-main__operating">
       <a class="page-main__download" href="#">Скачать приложение</a>
@@ -139,7 +143,7 @@
       <h4 class="contacts__title">Пишите:</h4>
       <a class="contacts__subtitle" href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
       <h4 class="contacts__title">Приезжайте в гости:</h4>
-      <p class="contacts__subtitle">ул. Большая Конюшенная, 19/8</p>
+      <p class="contacts__subtitle">ул. Большая<br>Конюшенная, 19/8</p>
       <img class="contacts__svg" src="img/trianglewhitefooter.png" alt="фон">
       <img class="contacts__map" src="img/map.jpg" width="320" height="200" alt="карта месторасположения">
     </div>
@@ -149,11 +153,11 @@
       <img class="page-footer__logo" src="img/logotypebluetablet.svg" width="145" height="40" alt="логотип пинк">
     </div>
     <div class="page-footer__image">
-      <a class="page-footer__twitter" href="#"><img src="img/twitter.svg" width="18" height="14"
+      <a class="page-footer__link" href="#"><img src="img/twitter.svg" width="18" height="14"
           alt="ссылка на твитерр аккаунт"></a>
-      <a class="page-footer__facebook" href="#"><img src="img/facebook.svg" width="9" height="18"
+      <a class="page-footer__link" href="#"><img src="img/facebook.svg" width="9" height="18"
           alt="ссылка на фейсбук аккаунт"></a>
-      <a class="page-footer__youtube" href="#"><img src="img/youtube.svg" width="15" height="13"
+      <a class="page-footer__link" href="#"><img src="img/youtube.svg" width="15" height="13"
           alt=" ссылка на ютуб канал"></a>
     </div>
     <div class="page-footer__copyright copyright">
