--- a/source/catalog.html
+++ b/source/catalog.html
@@ -11,9 +11,7 @@
 <body class="page__body">
   <header class="page-header">
     <div class="page-header__nav">
-      <a class="page-header__logo">
-        <img src="img/pinklogo.svg" width="74" height="23" alt="логотип пинк">
-      </a>
+      <a class="page-header__logo" href="index.html"></a>
       <button class="page-header__toggle" type="button"><span class="page-header__button">Открыть меню</span></button>
     </div>
     <nav class="main-nav">
