--- a/source/index.html
+++ b/source/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>HTML Academy: Пинк</title>
   <link rel="stylesheet" href="css/style.css">
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;700&display=swap" rel="stylesheet">
@@ -11,9 +12,7 @@
 <body class="page__body">
   <header class="page-header">
     <div class="page-header__nav">
-      <a class="page-header__logo">
-        <img src="img/pinklogo.svg" width="74" height="23" alt="логотип пинк">
-      </a>
+      <a class="page-header__logo" href="#"></a>
       <button class="page-header__toggle" type="button"><span class="page-header__button">Открыть меню</span></button>
     </div>
     <nav class="main-nav">
