--- a/source/index.html
+++ b/source/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>HTML Academy: Пинк</title>
+  <title>Главная</title>
   <link rel="stylesheet" href="css/style.css">
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;700&display=swap" rel="stylesheet">
 </head>
@@ -16,30 +16,28 @@
       <button class="page-header__toggle" type="button"><span class="page-header__button">Открыть меню</span></button>
     </div>
     <nav class="main-nav">
-      <div class="main-nav__wrapper">
-        <ul class="main-nav__list site-list">
-          <li class="site-list__item">
-            <a href="#">Главная</a>
-          </li>
-          <li class="site-list__item">
-            <a href="catalog.html">Фотографии</a>
-          </li>
-          <li class="site-list__item">
-            <a href="form.html">Конкурс</a>
-          </li>
-          <li class="site-list__item">
-            <a href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
-          </li>
-        </ul>
-      </div>
+      <ul class="main-nav__list site-list">
+        <li class="site-list__item">
+          <a href="#">Главная</a>
+        </li>
+        <li class="site-list__item">
+          <a href="catalog.html">Фотографии</a>
+        </li>
+        <li class="site-list__item">
+          <a href="form.html">Конкурс</a>
+        </li>
+        <li class="site-list__item">
+          <a href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
+        </li>
+      </ul>
     </nav>
   </header>
   <main class="page-main">
     <div class="page-main__wrap">
       <section class="page-main__wraper">
         <h1 class="page-main__title">Взгляните на жизнь иначе!</h1>
-        <img class="page-main__img" src="img/phone.png" width="320" height="286" alt="рука с телефоном">
       </section>
+      <img class="page-main__img" src="img/phone.png" width="320" height="286" alt="рука с телефоном">
       <div class="page-main__operating">
         <a class="page-main__download" href="#">Скачать приложение</a>
         <div class="page-main__operating-system">
@@ -68,7 +66,19 @@
         <p class="desc__subtitle">Ставьте лайки, комментируйте, делитесь фотографиями с друзьями и заводите новых</p>
       </div>
       <div class="desc__image">
-        <img src="img/iphone3.png" width="157" height="320" alt="изображение айфона">
+        <img class="desc__img" src="img/iphone3.png" width="157" height="320" alt="изображение айфона">
+      </div>
+    </div>
+    <div class="study">
+      <div class="study__image">
+        <img class="study__img" src="img/timer.png" width="238" height="276" alt="таймер">
+      </div>
+      <div class="study__wrap">
+        <h3 class="study__title">Эффектна 24 часа!</h3>
+        <p class="study__subtitle">Британские ученые провели исследования и доказали, что положительный эффект
+          от использования приложения длится целые сутки!
+        </p>
+        <a class="study__link" href="#">Узнать больше об исследовании</a>
       </div>
     </div>
     <div class="slider-review">
