--- a/source/form.html
+++ b/source/form.html
@@ -16,7 +16,7 @@
     <nav class="page-header__nav">
       <ul class="page-header__nav-list site-list">
         <li class="page-header__list-item page-header__list-menu">
-          <a class="page-header__logo"></a>
+          <a class="page-header__logo" href="index.html"></a>
           <button class="page-header__toggle" type="button"><span class="page-header__button"><svg width="23"
                 height="23" viewBox="0 0 23 23" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M20.8487 1.37761e-06L0 20.8487L2.15131 23L23 2.15131L20.8487 1.37761e-06Z" fill="white" />
