--- a/source/catalog.html
+++ b/source/catalog.html
@@ -37,7 +37,6 @@
         </li>
       </ul>
     </nav>
-    </div>
   </header>
   <main class="galery">
     <div class="galery__wrap">
@@ -49,7 +48,7 @@
       </div>
       <div class="panorama">
         <div class="panorama__img">
-          <a href="#">
+          <a class="panorama_link" href="#">
             <img class="panorama__photo" src="img/panoramatablet.jpg" width="320" height="137" alt="панорама дня"></a>
           <div class="panorama__day">Панорама дня</div>
         </div>
