Бургер меню по новой

--- a/source/index.html
+++ b/source/index.html
@@ -11,13 +11,13 @@
 
 <body class="page__body">
   <header class="page-header ">
-    <nav class="page-header__nav page-header__nav--closed page-header__nav--opened page-header__nav--nojs">
+    <nav class="page-header__nav page-header__nav--closed  page-header__nav--nojs">
       <div class="page-header__menu">
         <a class="page-header__logo" href="index.html"><img src="img/pinklogo.svg" width="74" height="23"
             alt="логотип сайта пинк"></a>
-        <a class="page-header__toggle"></a>
+        <button class="page-header__toggle"></button>
       </div>
-      <div class="page-header__nav-wrapper">
+      <div class="page-header__nav-wrapper page-header__nav--opened">
         <ul class="page-header__nav-list site-list">
           </li>
           <li class="page-header__list-item">
