--- a/source/catalog.html
+++ b/source/catalog.html
@@ -11,7 +11,7 @@
 
 <body class="page__body">
   <header class="page-header">
-    <nav class="page-header__nav page-header__nav--closed page-header__nav--opened page-header__nav--nojs">
+    <nav class="page-header__nav page-header__nav--closed page-header__nav--nojs">
       <div class="page-header__menu">
         <a class="page-header__logo" href="index.html"><img src="img/pinklogo.svg" width="74" height="23"
             alt="логотип сайта пинк"></a>
