--- a/source/catalog.html
+++ b/source/catalog.html
@@ -13,8 +13,13 @@
   <header class="page-header">
     <nav class="page-header__nav page-header__nav--closed page-header__nav--nojs">
       <div class="page-header__menu">
-        <a class="page-header__logo" href="index.html"><img src="img/pinklogo.svg" width="74" height="23"
-            alt="логотип сайта пинк"></a>
+        <a class="page-header__logo" href="index.html">
+          <picture>
+            <source media="(min-width: 1200px)" srcset="img/pinkdesktopwhite.png, img/pinkdesktopwhite@2x.png 2x">
+            <source media="(min-width: 700px)" srcset="img/pinktabletwhite.png, img/pinktabletwhite@2x.png 2x">
+            <img src="img/pink.png" srcset="img/pink@2x.png 2x" alt="логотип сайта пинк">
+          </picture>
+        </a>
         <a class="page-header__toggle"></a>
       </div>
       <div class="page-header__nav-wrapper">
@@ -46,7 +51,12 @@
       <div class="panorama">
         <div class="panorama__img">
           <a class="panorama_link" href="#">
-            <img class="panorama__photo" src="img/panoramatablet.jpg" width="320" height="137" alt="панорама дня"></a>
+            <picture>
+              <source media="(min-width: 1200px)" srcset="img/panoramadesktop.jpg, img/panoramadesktop@2x.jpg 2x">
+              <source media="(min-width: 700px)" srcset="img/panoramatablet.jpg, img/panoramatablet@2x.jpg 2x">
+              <img class="panorama__photo" src="img/panorama.jpg" srcset="img/panorama@2x.png 2x" alt="панорама дня">
+            </picture>
+          </a>
           <div class="panorama__day">Панорама дня</div>
         </div>
         <div class="panorama__text">
@@ -64,8 +74,13 @@
       <div class="galery__img-block">
         <div class="galery__inner">
           <div class="galery__img-wrap">
-            <a href="#"><img class="galery__photo" src="img/photo1.jpg" width="280" height="180"
-                alt="фото автомобиля"></a>
+            <a href="#">
+              <picture>
+                <source media="(min-width: 1200px)" srcset="img/photo1desktop.jpg, img/photo1desktop@2x.jpg 2x">
+                <source media="(min-width: 700px)" srcset="img/photo1tablet.jpg, img/photo1tablet@2x.jpg 2x">
+                <img class="galery__photo" src="img/photo1.jpg" srcset="img/photo1@2x.jpg 2x" alt="фото автомобиля">
+              </picture>
+            </a>
           </div>
           <div class="galery__text">
             <div class="galery__text-wrap">
@@ -84,8 +99,13 @@
         </div>
         <div class="galery__inner">
           <div class="galery__img-wrap">
-            <a href="#"><img class="galery__photo" src="img/photo2.jpg" width="280" height="180"
-                alt="ударная установка"></a>
+            <a href="#">
+              <picture>
+                <source media="(min-width: 1200px)" srcset="img/photo2desktop.jpg, img/photo2desktop@2x.jpg 2x">
+                <source media="(min-width: 700px)" srcset="img/photo2tablet.jpg, img/photo2tablet@2x.jpg 2x">
+                <img class="galery__photo" src="img/photo2.jpg" srcset="img/photo2@2x.jpg 2x" alt="ударная установка">
+              </picture>
+            </a>
           </div>
           <div class="galery__text">
             <div class="galery__text-wrap">
@@ -103,8 +123,13 @@
         </div>
         <div class="galery__inner">
           <div class="galery__img-wrap">
-            <a href="#"><img class="galery__photo" src="img/photo3.jpg" width="280" height="180"
-                alt="стеклянная стена"></a>
+            <a href="#">
+              <picture>
+                <source media="(min-width: 1200px)" srcset="img/photo3desktop.jpg, img/photo3desktop@2x.jpg 2x">
+                <source media="(min-width: 700px)" srcset="img/photo3tablet.jpg, img/photo3tablet@2x.jpg 2x">
+                <img class="galery__photo" src="img/photo3.jpg" srcset="img/photo3@2x.jpg 2x" alt="стеклянная стена">
+              </picture>
+            </a>
           </div>
           <div class="galery__text">
             <div class="galery__text-wrap">
@@ -123,8 +148,13 @@
         </div>
         <div class="galery__inner">
           <div class="galery__img-wrap">
-            <a href="#"><img class="galery__photo" src="img/photo4tablet.jpg" width="280" height="180"
-                alt="кубанская бахча"></a>
+            <a href="#">
+              <picture>
+                <source media="(min-width: 1200px)" srcset="img/photo4desktop.jpg, img/photo4desktop@2x.jpg 2x">
+                <source media="(min-width: 700px)" srcset="img/photo4tablet.jpg, img/photo4tablet@2x.jpg 2x">
+                <img class="galery__photo" src="img/photo4.jpg" srcset="img/photo4@2x.jpg 2x" alt="кубанская бахча">
+              </picture>
+            </a>
           </div>
           <div class="galery__text">
             <div class="galery__text-wrap">
@@ -143,8 +173,13 @@
         </div>
         <div class="galery__inner">
           <div class="galery__img-wrap">
-            <a href="#"><img class="galery__photo" src="img/photo5tablet.jpg" width="280" height="180"
-                alt="отдых в горах"></a>
+            <a href="#">
+              <picture>
+                <source media="(min-width: 1200px)" srcset="img/photo5desktop.jpg, img/photo5desktop@2x.jpg 2x">
+                <source media="(min-width: 700px)" srcset="img/photo5tablet.jpg, img/photo5tablet@2x.jpg 2x">
+                <img class="galery__photo" src="img/photo5.jpg" srcset="img/photo5@2x.jpg 2x" alt="отдых в горах">
+              </picture>
+            </a>
           </div>
           <div class="galery__text">
             <div class="galery__text-wrap">
@@ -162,8 +197,14 @@
         </div>
         <div class="galery__inner">
           <div class="galery__img-wrap">
-            <a href="#"><img class="galery__photo" src="img/photo6tablet.jpg" width="280" height="180"
-                alt="закат из иллюминатора"></a>
+            <a href="#">
+              <picture>
+                <source media="(min-width: 1200px)" srcset="img/photo6desktop.jpg, img/photo6desktop@2x.jpg 2x">
+                <source media="(min-width: 700px)" srcset="img/photo6tablet.jpg, img/photo6tablet@2x.jpg 2x">
+                <img class="galery__photo" src="img/photo6.jpg" srcset="img/photo6@2x.jpg 2x"
+                  alt="закат из иллюминатора">
+              </picture>
+            </a>
           </div>
           <div class="galery__text">
             <div class="galery__text-wrap">
@@ -186,8 +227,13 @@
     <div class="newphoto">
       <form class="newphoto__form" action="https://echo.htmlacademy.ru" method="POST">
         <div class="newphoto__photo">
-          <a class="newphoto__img" href="#"><img class="newphoto__photo" src="img/photo7tablet.jpg" width="280"
-              height="374" alt="морозная зима"></a>
+          <a class="newphoto__img" href="#">
+            <picture>
+              <source media="(min-width: 1200px)" srcset="img/photo7desktop.jpg, img/photo7desktop@2x.jpg 2x">
+              <source media="(min-width: 700px)" srcset="img/photo7tablet.jpg, img/photo7tablet@2x.jpg 2x">
+              <img class="newphoto__photo" src="img/photo7.jpg" srcset="img/photo7@2x.jpg 2x" alt="морозная зима">
+            </picture>
+          </a>
         </div>
         <div class="newphoto__wrap">
           <div class="newphoto__editor">
