--- a/source/form.html
+++ b/source/form.html
@@ -13,8 +13,13 @@
   <header class="page-header">
     <nav class="page-header__nav page-header__nav--closed page-header__nav--nojs">
       <div class="page-header__menu">
-        <a class="page-header__logo" href="index.html"><img src="img/pinklogo.svg" width="74" height="23"
-            alt="логотип сайта пинк"></a>
+        <a class="page-header__logo" href="index.html">
+          <picture>
+            <source media="(min-width: 1200px)" srcset="img/pinkdesktopwhite.png, img/pinkdesktopwhite@2x.png 2x">
+            <source media="(min-width: 700px)" srcset="img/pinktabletwhite.png, img/pinktabletwhite@2x.png 2x">
+            <img src="img/pink.png" srcset="img/pink@2x.png 2x" alt="логотип сайта пинк">
+          </picture>
+        </a>
         <a class="page-header__toggle"></a>
       </div>
       <div class="page-header__nav-wrapper">
