вторая отправка работы

--- a/source/form.html
+++ b/source/form.html
@@ -175,13 +175,12 @@
           <div class="form__contacts-wrap">
             <div class="form__contacts-wraper">
               <label class="form__contacts-label" for="phone">Номер телефона</label>
-              <input class="form__contacts-input" type="tel" name="phone" id="phone" placeholder="Номер,пожалуйста">
+              <input class="form__contacts-input" type="tel" name="phone" id="phone" placeholder="Номер, пожалуйста">
               <div class="form__contacts-phone"></div>
             </div>
             <div class="form__contacts-wraper">
               <label class="form__contacts-label" for="email">Адрес почты</label>
               <input class="form__contacts-input" type="email" name="email" id="email" placeholder="Введите почту *">
-              <div class="form__contacts-email"></div>
             </div>
           </div>
         </fieldset>
@@ -216,7 +215,8 @@
         </fieldset>
         <div class="form__button-wraper">
           <button class="form__button-send" type="submit" value="Отправить форму">Отправить форму</button>
-          <p class="form__important-text"><span class="form__important-star">*</span> — обязательные поля</p>
+          <p class="form__important-text"><span class="form__important-star">*</span> — обязательные<span
+              class="form__important-desc"> для заполнения</span> поля</p>
         </div>
       </form>
     </div>
